# asciiwebcam

./: .gitignore  CLAUDE.md  LICENSE  README.md  mise.toml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
ascii_webcam/: __init__.py  app.py  converter.py  status.py  term_test.py
ascii_webcam/tests/: __init__.py  test_app.py  test_converter.py  test_status.py
memory/: active-context.md  product-context.md  progress.md  project-brief.md  project-plan.md  tech-context.md
tests/: conftest.py
tests/unit/: test_converter.py
