[tool.poetry]
name = "ascii-webcam"
version = "0.1.0"
description = "Real-time ASCII art webcam viewer in the terminal"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "ascii_webcam"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.11.0"
numpy = "^2.2.4"
rich = "^13.9.4"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
pylint = "^3.3.6"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ascii-webcam = "ascii_webcam.app:main"

